Bug 1517711 - Guard other uses of SetPullingEnabled too. r=padenot

Depends on D15892

Differential Revision: https://phabricator.services.mozilla.com/D15896