dom/media/MediaManager.cpp
@@ -4193,7 +4193,8 @@ SourceListener::InitializeAsync() {
                  state->mTrackEnabled = true;
                  state->mTrackEnabledTime = TimeStamp::Now();
 
-                 if (state == mVideoDeviceState.get()) {
+                 if (state == mVideoDeviceState.get() &&
+                     !mStream->IsDestroyed()) {
                    mStream->SetPullingEnabled(kVideoTrack, true);
                  }
                }
